--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercício/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercício/style.css
@@ -5,7 +5,7 @@ h1 {
 fieldset {
   width: 50%;
   text-align: justify;
-  margin:auto;
+  margin-left: 30px;
   padding: 30px;
   line-height: 1.6;
 }
